hero image adjust

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="star-5 stars"></div>
         
             <figure id="gradient">
-        <img src="img/gradient-cutout-h.png">
+        <img src="img/gradient-cutout-e.png">
             </figure>
         
         <div id="face">
