--- a/cv/index.html
+++ b/cv/index.html
@@ -25,7 +25,11 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='../img/lana-crow-v3.pdf' frameborder='0' allowfullscreen></iframe></div>
+<section class="cv">
+        <div class="full-page-img">
+            <img src="../img/lana-crow-v3.pdf">
+        </div>  
+</section>
 
     
  
