--- a/dorothy/index.html
+++ b/dorothy/index.html
@@ -25,9 +25,11 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='../img/dorothy.png' frameborder='0' allowfullscreen></iframe></div>
-
-    
+<section class="dorothy-design">
+        <div class="full-page-img">
+            <img src="../img/dorothy.png">
+        </div>  
+    </section>
  
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
