--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ if($_POST["message"]) {
          </div>    
         <input type="text" required placeholder="Description of your project" id="enquiry">
              
-        <button type="submit">Send it off!</button>
+        <button type="submit" input type="submit">Send it off!</button>
             
              </form>
         </div>
