--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ if($_POST["message"]) {
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Lana Crow web designer and developer</title>
+  <title>Lana Crow multilingual UX web designer and developer</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -162,7 +162,7 @@ if($_POST["message"]) {
             </figure>
            
             <div>
-            <p>My designing and coding journey started when I felt great frustration with some websites and realised I wanted to decode what's behind and understand how this crazy thing works and how to make it better. I am still easily confused by many apps and sites and there comes my passion for UX - things can be so much more straightforward! Simplicity is the key. We are largely overwhelmed by huge amount of information coming at us from everywhere and do not have time to chase buttons and links and my biggest mission will always be to build sites that are as user friendly and straightforward to use as possible.
+            <p>Originally a foreign languages teacher I jumped on my designing and coding journey because of the great frustration I felt while browsing some websites and I realised then that I always wanted to decode what is behind the surface and understand how this crazy thing works and how to make it better. I am still easily confused by many apps and sites and there comes my passion for UX - things can be so much more straightforward! Simplicity is the key. We are largely overwhelmed by huge amount of information coming at us from everywhere and do not have time to chase buttons and links and my biggest mission will always be to build sites that are as user friendly and straightforward to use as possible.
                 <br>
             
             I am a perfectionist and whilst it's pretty hard to reach the perfect, I certainly strive to. Things got to look good and be functional at the same time. Why can't they be, right?</p>
