ie phone number format

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ if($_POST["message"]) {
         
         <h4>Contact directly</h4>
             <ul>
-            <li>+447704445536</li>
+            <li x-ms-format-detection="none">+447704445536</li>
             <li>svet.crow@gmail.com</li>
                 </ul>
         
