--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@ if($_POST["message"]) {
         <div id="contact-details">
         
         <h4>Contact directly</h4>
-            <ul>
-            <li x-ms-format-detection="none">+447704445536</li>
+            <ul x-ms-format-detection="none">
+            <li>+447704445536</li>
             <li>svet.crow@gmail.com</li>
                 </ul>
         
