--- a/index.html
+++ b/index.html
@@ -38,14 +38,15 @@
    
        <ul>
            <li id="language" class="dropdown"><a href="#" class="lang">EN <i class="fa fa-caret-down"></i></a>
-           <ul class="dropdown-content">
+           <ul id="lang-dropdown-content" class="dropdown-content">
                <li class="nav-item"><a href="#">FR</a></li>   
                <li class="nav-item"><a href="#">DE</a></li>   
                <li class="nav-item"><a href="#">РУ</a></li>      
            </ul>
         </li>
+           
         <li id="menu" class="dropdown"><i class="fa fa-bars"></i>
-            <ul class="dropdown-content">
+            <ul id="menu-dropdown-content" class="dropdown-content">
                 <li><a href="#portfolio">PORTFOLIO</a></li>   
                 <li><a href="#about">ABOUT ME</a></li>
                 <li><a href="#contact">CONTACT</a></li>
@@ -57,8 +58,11 @@
     <section id="name">
    <div class="container">
         <h1><span>LANA</span> CROW</h1>
-
-        <h2>UX, Web Designer and Developer</h2>
+        </div>
+       </section>
+        <section id="title">
+    <div class="container">
+        <h1>UX, Web Designer and Developer</h1>
 
         </div>
     </section>
@@ -212,6 +216,10 @@
             <article>
                 <p>lorem epsum</p>
  
+            </article>
+            <article>
+                <p>lorem epsum</p>
+    
             </article>
             <article>
                 <p>lorem epsum</p>
