--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
            
         <li id="menu" class="dropdown"><i class="fa fa-bars"></i>
             <ul id="menu-dropdown-content" class="dropdown-content">
-                <li><a href="#portfolio">Portfolio</a></li>   
-                <li><a href="#about">About&nbsp;me</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#portfolio">PORTFOLIO</a></li>   
+                <li><a href="#about">ABOUT&nbsp;ME</a></li>
+                <li><a href="#contact">CONTACT</a></li>
             </ul>
          </li> 
         </ul>
