--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
            
         <li id="menu" class="dropdown"><i class="fa fa-bars"></i>
             <ul id="menu-dropdown-content" class="dropdown-content">
-                <li><a href="#portfolio">PORTFOLIO</a></li>   
-                <li><a href="#about">ABOUT&nbsp;ME</a></li>
-                <li><a href="#contact">CONTACT</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>   
+                <li><a href="#about">About&nbsp;me</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
          </li> 
         </ul>
@@ -216,7 +216,7 @@
         <h2>Testimonials</h2>
         <div id="reviews">
             <article>
-                <p>“I was delighted with Lana’s work on my website.  She researched and communicated the options quickly and clearly and completed the work within budget.  I will definitely use her again.”<br/> Jo Walder</p>
+                <p>“I was delighted with Lana’s work on my website.  She researched and communicated the options quickly and clearly and completed the work within budget.  I will definitely use her again.”<br/><em>Jo Walder</em></p>
  
             </article>
             <article>
