--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <p>As part of my UX research and design project I redesigned this local bicycle rental company website to improve their site accessibility and increase the company's online reservation rates.
 
 </p>
-            <a class="button" href="city-cycles/index.html" role="button" target="_blank">View Prototype</a>
+            <a class="button" href="city-cycles/index.html" role="button" target="_blank">View Case Study</a>
          
         </div>
             
