--- a/city-cycles/index.html
+++ b/city-cycles/index.html
@@ -27,11 +27,9 @@
  
    
     <!-- Add your site or application content here -->
-<!-- <style>.embed-container { position: relative; padding-bottom: 100%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='../img/City-Cycles-UX-Case-Study.pdf' frameborder='0' allowfullscreen></iframe></div>
-    
-    -->
 
-   <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQmbrgu9r-xnqGjWF99Ln_nnE3Oyr9Hgtj-G4gaVHpGeBrSPd8fFqNYh3vGvN-3t6r7T-V3u4F9fHSG/embed?start=false&loop=false&delayms=3000" frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+   <style>.embed-container { position: relative; padding-bottom: 100%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='../img/city-cycles-ux-case-study.pdf' frameborder='0' allowfullscreen></iframe></div>
  
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
