--- a/cv/index.html
+++ b/cv/index.html
@@ -27,7 +27,7 @@
   <!-- Add your site or application content here -->
 <section class="cv">
         <div class="full-page-img">
-            <img src="../img/lana-crow-v3.pdf">
+            <img src="../img/lana-crow-cv.png">
         </div>  
 </section>
 
