--- a/index.html
+++ b/index.html
@@ -221,13 +221,9 @@
  
             </article>
             <article>
-                <p>Having no previous experience in website design I spoke to Lana briefly, not having much idea what I required.
+                <p>I wasn't sure what I wanted my site to look like so I trusted Lana to design and develop it and was not disappointed. She researched my industry and selected the information needed to make the most impact, promoting my core values and positive aspects of my business. I am very happy with the style and colours she chose. It is simple enough to navigate quickly and it's not overly fussy. She also took care of the SEO.
 
-She took the task of designing my website into her own hands, she fully researched my industry and selected the information needed to make the most impact, promoting my core values and positive aspects of my business. I am very happy with the style and colours she chose and also that it is very appealing to all genders. It is simple enough to navigate quickly as I run a very small business. I was pleased it was not overly fussy.
-
-It is a Wordpress site, so it is already SEO friendly, however she took care of extra tweaks to make it even more search engine optimised.
-
-I look forward to working with her in the future.<br/><em>Julie W.</em></p>
+I look forward to working with her again.<br/><em>Julie W.</em></p>
     
             </article>
             <article>
