--- a/city-cycles/index.html
+++ b/city-cycles/index.html
@@ -29,7 +29,8 @@
     <!-- Add your site or application content here -->
 
 
-   <style>.embed-container { position: relative; padding-bottom: 100%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src="../img/ux-case-study.pdf" frameborder='0' allowfullscreen></iframe></div>
+   <style>.embed-container { position: relative; padding-bottom: 100%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src="../img/ux-case-study.pdf" frameborder='0' allowfullscreen
+   src="https://drive.google.com/viewerng/viewer?embedded=true&url=../img/ux-case-study.pdf"></iframe></div>
  
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
