--- a/french/index.html
+++ b/french/index.html
@@ -271,11 +271,11 @@
              <h5>Votre Budget</h5>
             
         <label for="500">
-        <input type="radio" id="500" value="500" name="radio"> £500 ou moins</label>
+        <input type="radio" id="500" value="500" name="radio"> €500 ou moins</label>
         <label for="750">
-    <input type="radio" id="750" value="750" name="radio"> £750</label>
+    <input type="radio" id="750" value="750" name="radio"> €750</label>
         <label for="1000">
-    <input id="1000" value="1000" type="radio" name ="radio"> £1,000 ou plus</label>
+    <input id="1000" value="1000" type="radio" name ="radio"> €1,000 ou plus</label>
 
          </div>    
         <input type="text" required placeholder="Description de votre project" id="enquiry" name="enquiry" required>
