slide in languages translated

--- a/french/index.html
+++ b/french/index.html
@@ -222,7 +222,7 @@
             <img src="../img/tech-skills.png" alt="tech skills diagram"> 
             </figure>
             <figure id="right" class="slidein-right">
-              <img src="../img/languages-eng.png" alt="language skills diagram"> 
+              <img src="../img/languages-fr.png" alt="language skills diagram"> 
             </figure>
         </div>
   
