--- a/russian/index.html
+++ b/russian/index.html
@@ -223,7 +223,7 @@
             <img src="../img/tech-skills.png" alt="tech skills diagram"> 
             </figure>
             <figure id="right" class="slidein-right">
-              <img src="../img/languages-eng.png" alt="language skills diagram"> 
+              <img src="../img/languages-ru.png" alt="language skills diagram"> 
             </figure>
         </div>
   
