--- a/index.html
+++ b/index.html
@@ -330,12 +330,12 @@
         </div>
         <div id="social">
             <ul class="social-links">
-            <li><a href="https://www.facebook.com/lana.crow.779" target="_blank"><i class="fa fab fa-facebook"></i></a>
+            <li><a href="https://www.facebook.com/lana.crow.779" target="_blank"><i class="fab fa-facebook-f"></i></a>
             </li>
-            <li><a href="https://www.twitter.com" target="_blank"><i class="fa fab fa-twitter"></i></a></li>
-            <li><a href="https://github.com/lanacrow1978?" target="_blank"><i class="fa fab fa-github"></i></a></li> 
-            <li><a href="https://www.behance.net/SVETCROW9271?tracking_source=search-all%7Clana%20crow" target="_blank"><i class="fa fab fa-behance" ></i></a></li> 
-             <li><a href="https://www.linkedin.com/in/lana-crow/" target="_blank"><i class="fa fab fa-linkedin" ></i></a></li>    
+            <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="https://github.com/lanacrow1978?" target="_blank"><i class="fab fa-github"></i></a></li> 
+            <li><a href="https://www.behance.net/SVETCROW9271?tracking_source=search-all%7Clana%20crow" target="_blank"><i class="fab fa-behance" ></i></a></li> 
+             <li><a href="https://www.linkedin.com/in/lana-crow/" target="_blank"><i class="fab fa-linkedin-in" ></i></a></li>    
             </ul>
         </div> 
     
