--- a/german/index.html
+++ b/german/index.html
@@ -66,7 +66,7 @@
        </section>
         <section id="title">
     <div class="container">
-        <h1>UX-, Webesigner und Entwickler</h1>
+        <h1>UX-, Webdesigner und Entwickler</h1>
 
         </div>
     </section>
