set width of face div to 100%

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     
 <section id="diagrams">
     <div class="content_wrapper">
-    
+    <h2>Skills</h2>
    
         <div id="diagrams-img">
             <figure id="left" class="slidein-left">
