changed pdf to google link

--- a/german/index.html
+++ b/german/index.html
@@ -221,7 +221,8 @@
     <section id="diagrams">
     <div class="content_wrapper">
     
-   
+    <h2>Fach- und Sprachkenntnisse</h2>
+        
         <div id="diagrams-img">
             <figure id="left" class="slidein-left">
             <img src="../img/tech-skills.png" alt="tech skills diagram"> 
