--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
             
         <div class="project-img">
-            <a href="city-cycles/index.html" target="_blank"><img src="img/city-cycles.png" alt="image of city cycles project"></a>
+            <a href="https://docs.google.com/presentation/d/16qIkwurlCjN8AvRYTjGtn-KmyrOCBjwhin1r_HrDiV4/edit?usp=sharing" target="_blank"><img src="img/city-cycles.png" alt="image of city cycles project"></a>
         </div>  
     </div> 
         
