cv back home link

--- a/cv/index.html
+++ b/cv/index.html
@@ -28,7 +28,7 @@
 <section class="cv">
         <div class="full-page-img">
             <img src="../img/lana_crow_cv.png">
-             <a href="../index.html" class="home-button">&#8810; BACK HOME</a>
+             <a href="../index.html" class="home-button">&#8810; BACK TO HOMEPAGE</a>
         </div>  
 </section>
 
