--- a/french/cv-fr/index.html
+++ b/french/cv-fr/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html class="no-js" lang="ru">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Lana Crow многоязычный UX веб-дизайнер и разработчик дизайн</title>
+  <title>Lana Crow web designer and developer CV</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -25,12 +25,14 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-<section class="dorothy-design">
+<section class="cv">
         <div class="full-page-img">
-            <img src="../../img/dorothy.png" alt="Dorothy design">
-            <a href="../index.html" class="home-button">&#8810; Назад на главную страницу</a>
+            <img src="../../img/lana_crow_cv.png">
+             <a href="../index.html" class="home-button">&#8810; RETOUR À LA PAGE D'ACCUEIL</a>
         </div>  
- </section>
+</section>
+
+    
  
  <script src="js/vendor/modernizr-3.6.0.min.js"></script>
 
