--- a/german/index.html
+++ b/german/index.html
@@ -175,7 +175,7 @@
             Ich bin Perfektionistin und obwohl es sehr schwer ist, ein solches Niveau zu erreichen, bemühe ich mich stets darum. Websites sollten gut aussehen und gleichzeitig funktionsfähig sein. Warum sollte jemand weniger akzeptieren wollen?</p>
             
             <div>
-            <a class="button" href="../cv/index.html" target="_blank">Lebenslauf ansehen</a>
+            <a class="button" href="cv-de/index.html">Lebenslauf ansehen</a>
             </div>
             </article>
          </div>
