--- a/russian/index.html
+++ b/russian/index.html
@@ -179,7 +179,7 @@
             Я перфекционист и не смотря на то, что уровень совершенства достичь трудно (если возможно), я все равно прилагаю для этого все усилия. Сайты должны быть приятными на глаз и функциональными. Кто с этим не согласиться?</p>
             
             <div>
-            <a class="button" href="../cv/index.html" target="_blank">Посмотреть резюме</a>
+            <a class="button" href="cv-ru/index.html">Посмотреть резюме</a>
             </div>
             </article>
          </div>
