--- a/dorothy/index.html
+++ b/dorothy/index.html
@@ -28,7 +28,7 @@
 <section class="dorothy-design">
         <div class="full-page-img">
             <img src="../img/dorothy.png">
-            <a href="../index.html" class="home-button">&#8810; BACK HOME</a>
+            <a href="../index.html" class="home-button">&#8810; BACK TO HOMEPAGE</a>
         </div>  
  </section>
  
