--- a/german/cv-de/index.html
+++ b/german/cv-de/index.html
@@ -1,21 +1,21 @@
 <!doctype html>
-<html class="no-js" lang="ru">
+<html class="no-js" lang="de">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Lana Crow многоязычный UX веб-дизайнер и разработчик дизайн</title>
+  <title>Lana Crow web designer and developer CV</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="manifest" href="site.webmanifest">
+ <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="../../icon.png">
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="../../css/normalize.css">
   <link rel="stylesheet" href="../../css/main.css">
     
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    
 </head>
 
@@ -25,12 +25,14 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-<section class="dorothy-design">
+<section class="cv">
         <div class="full-page-img">
-            <img src="../../img/dorothy.png" alt="Dorothy design">
-            <a href="../index.html" class="home-button">&#8810; Назад на главную страницу</a>
+            <img src="../../img/lana_crow_cv.png">
+             <a href="../index.html" class="home-button">&#8810; ZURÜCK ZUR STARTSEITE</a>
         </div>  
- </section>
+</section>
+
+    
  
  <script src="js/vendor/modernizr-3.6.0.min.js"></script>
 
@@ -54,6 +56,7 @@
   <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 
 </body>
 
