added link to google pdf city cycles

--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
             <p>As part of my UX research and design project I redesigned this local bicycle rental company website to improve their site accessibility and increase the company's online reservation rates.
                 <br/>
              <em>(Software: Adobe XD, Photoshop, Illustrator)</em></p>
-            <a class="button" href="https://docs.google.com/presentation/d/16qIkwurlCjN8AvRYTjGtn-KmyrOCBjwhin1r_HrDiV4/edit?usp=sharing" role="button" target="_blank">View Case Study</a>
+            <!--<a class="button" href="https://docs.google.com/presentation/d/16qIkwurlCjN8AvRYTjGtn-KmyrOCBjwhin1r_HrDiV4/edit?usp=sharing" role="button" target="_blank">-->
+            <a class="button" href="https://docs.google.com/viewerng/viewer?url=https://github.com/lanacrow1978/city-cycles/raw/master/ux-case-study.pdf" role="button" target="_blank">
+            View Case Study</a>
          
         </div>
             
