completed final checks

--- a/cv/index.html
+++ b/cv/index.html
@@ -27,7 +27,7 @@
   <!-- Add your site or application content here -->
 <section class="cv">
         <div class="full-page-img">
-            <img src="../img/lana_crow_cv.png">
+            <img src="../img/lana_crow_cv.png" alt="Lana Crow CV">
              <a href="../index.html" class="home-button">&#8810; BACK TO HOMEPAGE</a>
         </div>  
 </section>
