--- a/dorothy/index.html
+++ b/dorothy/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Lana Crow web designer and developer CV</title>
+  <title>Lana Crow web designer and developer design example</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -27,7 +27,7 @@
   <!-- Add your site or application content here -->
 <section class="dorothy-design">
         <div class="full-page-img">
-            <img src="../img/dorothy.png">
+            <img src="../img/dorothy.png" alt="Dorothy design">
             <a href="../index.html" class="home-button">&#8810; BACK TO HOMEPAGE</a>
         </div>  
  </section>
