--- a/french/cv-fr/index.html
+++ b/french/cv-fr/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="fr">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Lana Crow web designer and developer CV</title>
+  <title>Lana Crow concepteur Web, UX et développeur web polyglotte CV</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -27,7 +27,7 @@
   <!-- Add your site or application content here -->
 <section class="cv">
         <div class="full-page-img">
-            <img src="../../img/lana_crow_cv.png">
+            <img src="../../img/lana_crow_cv.png" alt="Lana Crow CV">
              <a href="../index.html" class="home-button">&#8810; RETOUR À LA PAGE D'ACCUEIL</a>
         </div>  
 </section>
