--- a/german/cv-de/index.html
+++ b/german/cv-de/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Lana Crow web designer and developer CV</title>
+  <title>Lana Crow mehrsprachige UX-designer, Webdesigner und Webentwickler Lebenslauf</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -27,7 +27,7 @@
   <!-- Add your site or application content here -->
 <section class="cv">
         <div class="full-page-img">
-            <img src="../../img/lana_crow_cv.png">
+            <img src="../../img/lana_crow_cv.png" alt="Lana Crow Lebenslauf">
              <a href="../index.html" class="home-button">&#8810; ZURÜCK ZUR STARTSEITE</a>
         </div>  
 </section>
