adjusted margins for iphone x

--- a/cv/index.html
+++ b/cv/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Lana Crow web designer and developer CV</title>
-  <meta name="description" content="">
+  <title>Lana Crow UX-designer, web designer and developer CV</title>
+  <meta name="description" content="Lana Crow (Svetlana Crow) multilingual UX-designer, web designer and developer CV">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="manifest" href="site.webmanifest">
