--- a/de/cv-de/index.html
+++ b/de/cv-de/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Lana Crow mehrsprachige UX-designer, Webdesigner und Webentwickler Lebenslauf</title>
-  <meta name="description" content="">
+  <title>Lana Crow UX-designer, Webdesigner und Webentwickler Lebenslauf</title>
+  <meta name="description" content="Lana Crow (Svetlana Crow) mehrsprachige UX-designer, Webdesigner und Webentwickler Lebenslauf">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
  <link rel="manifest" href="site.webmanifest">
