--- a/de/dorothy-de/index.html
+++ b/de/dorothy-de/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html class="no-js" lang="ru">
+<html class="no-js" lang="de">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Lana Crow многоязычный UX веб-дизайнер и разработчик дизайн</title>
-  <meta name="description" content="">
+  <title>Lana Crow mehrsprachige UX-designer, Webdesigner und Webentwickler - Designbeispiel</title>
+  <meta name="description" content="Designbeispiel">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="manifest" href="site.webmanifest">
@@ -28,7 +28,7 @@
 <section class="dorothy-design">
         <div class="full-page-img">
             <img src="../../img/dorothy.png" alt="Dorothy design">
-            <a href="../index.html" class="home-button">&#8810; Назад на главную страницу</a>
+            <a href="../index.html" class="home-button">&#8810; ZURÜCK ZUR STARTSEITE</a>
         </div>  
  </section>
  
