--- a/fr/cv-fr/index.html
+++ b/fr/cv-fr/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html class="no-js" lang="de">
+<html class="no-js" lang="fr">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Lana Crow mehrsprachige UX-designer, Webdesigner und Webentwickler - Designbeispiel</title>
-  <meta name="description" content="">
+  <title>Lana Crow concepteur Web, UX et développeur web polyglotte CV</title>
+  <meta name="description" content="Lana Crow (Svetlana Crow) concepteur Web, UX et développeur web polyglotte CV">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="manifest" href="site.webmanifest">
@@ -25,12 +25,14 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-<section class="dorothy-design">
+<section class="cv">
         <div class="full-page-img">
-            <img src="../../img/dorothy.png" alt="Dorothy design">
-            <a href="../index.html" class="home-button">&#8810; ZURÜCK ZUR STARTSEITE</a>
+            <img src="../../img/lana_crow_cv.png" alt="Lana Crow CV">
+             <a href="../index.html" class="home-button">&#8810; RETOUR À LA PAGE D'ACCUEIL</a>
         </div>  
- </section>
+</section>
+
+    
  
  <script src="js/vendor/modernizr-3.6.0.min.js"></script>
 
