--- a/fr/dorothy-fr/index.html
+++ b/fr/dorothy-fr/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html class="no-js" lang="ru">
+<html class="no-js" lang="fr">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Lana Crow многоязычный UX веб-дизайнер и разработчик - резюме</title>
-  <meta name="description" content="">
+  <title>Lana Crow concepteur Web, UX et développeur web polyglotte - exemple de conception</title>
+  <meta name="description" content="Lana Crow (Svetlana Crow) Vitrine d'un design web">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
- <link rel="manifest" href="site.webmanifest">
+  <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="../../icon.png">
   <!-- Place favicon.ico in the root directory -->
 
@@ -16,7 +16,6 @@
   <link rel="stylesheet" href="../../css/main.css">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-   
    
 </head>
 
@@ -26,14 +25,12 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-<section class="cv">
+<section class="dorothy-design">
         <div class="full-page-img">
-            <img src="../../img/lana_crow_cv.png" alt="cv">
-             <a href="../index.html" class="home-button">&#8810; Назад на главную страницу</a>
+            <img src="../../img/dorothy.png" alt="Dorothy design">
+            <a href="../index.html" class="home-button">&#8810; RETOUR À LA PAGE D'ACCUEIL</a>
         </div>  
-</section>
-
-    
+ </section>
  
  <script src="js/vendor/modernizr-3.6.0.min.js"></script>
 
@@ -57,7 +54,6 @@
   <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
 
 </body>
 
