--- a/ru/dorothy-ru/index.html
+++ b/ru/dorothy-ru/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html class="no-js" lang="fr">
+<html class="no-js" lang="ru">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Lana Crow concepteur Web, UX et développeur web polyglotte CV</title>
-  <meta name="description" content="">
+  <title>Lana Crow дизайн</title>
+  <meta name="description" content="Светлана Кроу дизайн">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="manifest" href="site.webmanifest">
@@ -25,14 +25,12 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-<section class="cv">
+<section class="dorothy-design">
         <div class="full-page-img">
-            <img src="../../img/lana_crow_cv.png" alt="Lana Crow CV">
-             <a href="../index.html" class="home-button">&#8810; RETOUR À LA PAGE D'ACCUEIL</a>
+            <img src="../../img/dorothy.png" alt="Dorothy design">
+            <a href="../index.html" class="home-button">&#8810; Назад на главную страницу</a>
         </div>  
-</section>
-
-    
+ </section>
  
  <script src="js/vendor/modernizr-3.6.0.min.js"></script>
 
