--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         </div>  
      </div>
     </div>
-    
+    <a href="#" class="back-to-top">&#10514;</a>
     </section>
     
      <section id="about">
