--- a/ru/index.html
+++ b/ru/index.html
@@ -304,11 +304,11 @@
              <h5>Бюджет</h5>
             
         <label for="500">
-        <input type="radio" id="500" value="500" name="radio"> £500 или менее</label>
+        <input type="radio" id="500" value="500" name="radio"> £500 и менее</label>
         <label for="750">
     <input type="radio" id="750" value="750" name="radio"> £750</label>
         <label for="1000">
-    <input id="1000" value="1000" type="radio" name ="radio"> £1,000 или более</label>
+    <input id="1000" value="1000" type="radio" name ="radio"> £1,000 и более</label>
 
          </div>    
         <input type="text" required placeholder="Описание проекта" id="enquiry" name="enquiry" required>
