margins for different media quesires

--- a/ru/index.html
+++ b/ru/index.html
@@ -162,7 +162,7 @@
         </div>  
      </div>
     </div>
-    
+        <a href="#" class="back-to-top">&#10514;</a>
     </section>
     
      <section id="about">
