--- a/de/index.html
+++ b/de/index.html
@@ -159,7 +159,7 @@
         </div>  
      </div>
     </div>
-    
+        <a href="#" class="back-to-top">&#10514;</a>
     </section>
     
      <section id="about">
