--- a/fr/index.html
+++ b/fr/index.html
@@ -160,7 +160,7 @@
         </div>  
      </div>
     </div>
-    
+        <a href="#" class="back-to-top">&#10514;</a>
     </section>
     
      <section id="about">
