--- a/ru/index.html
+++ b/ru/index.html
@@ -339,7 +339,7 @@
             <ul class="social-links">
             <li><a href="https://www.facebook.com/lana.crow.779" target="_blank"><i class="fab fa-facebook-f"></i></a>
             </li>
-            <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="https://twitter.com/crowlana" target="_blank"><i class="fab fa-twitter"></i></a></li>
             <li><a href="https://www.behance.net/SVETCROW9271?tracking_source=search-all%7Clana%20crow" target="_blank"><i class="fab fa-behance" ></i></a></li> 
              <li><a href="https://www.linkedin.com/in/lana-crow/" target="_blank"><i class="fab fa-linkedin-in" ></i></a></li> 
             </ul>
