added meta for phone number

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Freelance UX design, web design and web development in London, UK </title>
   <meta name="description" content="Lana Crow (Svetlana Crow) multilingual UX-designer, web designer and developer in London, UK - I design and build websites for less">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+<meta name="format-detection" content="telephone=no">
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
