--- a/dorothy/index.html
+++ b/dorothy/index.html
@@ -27,7 +27,7 @@
   <!-- Add your site or application content here -->
 <section class="dorothy-design">
         <div class="full-page-img">
-            <img src="../img/dorothy.png" alt="Dorothy design">
+            <img src="../img/front-page-dorothy.png" alt="Dorothy design">
             <a href="../index.html" class="home-button">&#8810; BACK TO HOMEPAGE</a>
         </div>  
  </section>
